@@ -1,5 +1,7 @@
 4.5.x
 =====
+- Separator can have different styles: space, expanded space, line (default),
+  handle and old-style dotted handle. Initial patch by Landry Breuil. (Jasper)
 - Make sure tooltips are set for more than 1 clock instance (bug #3109).
   (Jasper)
 - Fix area that is off-limits to other windows (_NET_WM_STRUT hints) for a
